[build-system]
requires = [ "setuptools>=41.0.1", "wheel>=0.37.1",]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "erotemic", "purepy", "github", "cv2"]
mod_name = "dtool_ibeis"
repo_name = "dtool_ibeis"
rel_mod_parent_dpath = "."
os = [ "linux", "osx", "win",]
ci_pypy_versions = []
supported_python_versions = ["3.7", "3.8", "3.9", "3.10", "3.11"]
description = "dtool_ibeis - a dependency aware cache for ibeis"
url="https://github.com/Erotemic/dtool_ibeis"
author="Jon Crall"
author_email="erotemic@gmail.com"
dev_status = "beta"
license = "Apache 2"
autostage = true
version = "{mod_dpath}/__init__.py::__version__"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "dtool_ibeis/__main__.py", "*/setup.py",]
